--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_SIMPLE_REST_URL=http://localhost:5056/odata
+VITE_ODATA_ADDRESS=http://localhost:5056/odata
+#VITE_ODATA_ADDRESS=https://backend.eldoriantales.com/odata
 
