--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "format": "prettier --write ./src"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^40.0.0",
+    "@ckeditor/ckeditor5-react": "^6.1.0",
     "ra-data-odata-server": "^4.1.0",
     "ra-data-simple-rest": "^4.14.0",
-    "ra-input-rich-text": "^4.15.1",
     "react": "^18.2.0",
     "react-admin": "^4.14.0",
     "react-dom": "^18.2.0"
