--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "format": "prettier --write ./src"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^40.0.0",
     "@ckeditor/ckeditor5-react": "^6.1.0",
+    "ckeditor5-custom-build": "file:./ckeditor5",
     "ra-data-odata-server": "^4.1.0",
     "ra-data-simple-rest": "^4.14.0",
     "react": "^18.2.0",
