--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-# VITE_ODATA_ADDRESS=http://localhost:5056/odata
-VITE_ODATA_ADDRESS=https://backend.eldoriantales.com/odata
+VITE_ODATA_ADDRESS=http://localhost:5056/odata
+#VITE_ODATA_ADDRESS=https://backend.eldoriantales.com/odata
 
